[package]
name = "kreta-proxy"
version = "0.1.2"
authors = ["Kornél Stefán <stefankornel02@gmail.com>"]
edition = "2018"

[[bin]]
name = "kreta-proxy"
path = "src/kreta_proxy.rs"

[dependencies]
actix-web = "^0.7"

futures = "0.1"
failure = "0.1.5"

reqwest = "0.9.16"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

env_logger = "0.5"
log = "0.4"

chrono = "0.4.6"

#Broken tokio on windows
tokio = "=0.1.17"
tokio-signal = "=0.2.7"