[package]
name = "kreta-proxy"
version = "0.1.3"
authors = ["Kornél Stefán <stefankornel02@gmail.com>"]
edition = "2018"

[[bin]]
name = "kreta-proxy"
path = "src/kreta_proxy.rs"

[dependencies]

chrono = "0.4.6"
derive_more = "0.15"
futures = "0.1"
serde = "1.0"
actix-web = "~1.0"

reqwest = "0.9.16"

env_logger = "0.5"
log = "0.4"