[package]
name = "kreta-proxy"
version = "0.2.0"
authors = ["Kornél Stefán <stefankornel02@gmail.com>"]
edition = "2018"

[[bin]]
name = "kreta-proxy"
path = "src/kreta_proxy.rs"

[dependencies]

chrono = "0.4.6"
derive_more = "0.99"
futures = "0.3"
serde = "1.0"
tokio = {version = "0.2.4", features = ["macros"]}
actix-rt = "~1.0"
actix-web = "~2.0"

reqwest = {version = "0.10", features = ["json"]}

env_logger = "0.6"
log = "0.4"